Issues:
0001511: DOMPrep.py - tolerate failures to open dev file
==============================================================


V00-01-00 5-31-07 John Jacobsen john@mail.npxdesigns.com

First working version, same functionality as the pythonic part of 
domapp-tools V00-02-01.

Issues:
0001485: Use distutils to package up python part of domapp-tools
0001490: make DOMPrep.py script to put DOMs in iceboot
==============================================================

V00-00-04 5-31-07 john@mail.npxdesigns.com:
First (almost) working version
==============================================================

V00-00-03 5-30-07 john@mail.npxdesigns.com:
Move files into domapptools package
==============================================================

V00-00-02 5-30-07 john@mail.npxdesigns.com:
Test out release procedure
==============================================================

V00-00-01 5-30-07 john@mail.npxdesigns.com:
First version